--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -39,6 +39,9 @@
     ]
   },
   "settings": {
+    "react": {
+      "version": "detect"
+    },
     "import/resolver": {
       "node": {
         "extensions": [".js", ".jsx", ".ts", ".tsx"],
