--- a/package.json
+++ b/package.json
@@ -58,16 +58,10 @@
       "last 1 safari version"
     ]
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
   "lint-staged": {
-    "src/**/*.{js,jsx}": [
-      "eslint --fix",
-      "prettier --write",
-      "git add"
+    "src/**/*.{js, jsx}": [
+      "eslint",
+      "prettier --write"
     ]
   }
 }
